@@ -25,6 +25,8 @@ extern c10::Symbol multilabel_soft_margin_loss; // NOLINT
 extern c10::Symbol bernoulli_;                  // NOLINT
 extern c10::Symbol clamp_min_;                  // NOLINT
 extern c10::Symbol clamp_max_;                  // NOLINT
+extern c10::Symbol amax;                        // NOLINT
+extern c10::Symbol amin;                        // NOLINT
 } // namespace c10::aten
 
 namespace poptorch {
